--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "nanoid": "^3.3.4",
     "normalize.css": "^8.0.1",
     "react": "^18.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
     "react-scripts": "5.0.1",
